[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/titlescreen_1.png" type="Texture" id=1]
[ext_resource path="res://scripts/Sprite.gd" type="Script" id=2]
[ext_resource path="res://scripts/FadeBlack.gd" type="Script" id=3]
[ext_resource path="res://audio/Intro (Beta).ogg" type="AudioStream" id=4]

[sub_resource type="Animation" id=1]

resource_name = "fadetoblack"
length = 3.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ) ]
}

[node name="TitleScreen" type="Node" index="0"]

[node name="Sprite" type="Sprite" parent="." index="0"]

position = Vector2( 640, 480 )
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )
script = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="FadeBlack" type="ColorRect" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 960.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 0 )
script = ExtResource( 3 )
_sections_unfolded = [ "Rect" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeBlack" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/fadetoblack = SubResource( 1 )
blend_times = [  ]

[node name="fadeTimer" type="Timer" parent="FadeBlack" index="1"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Button" type="Button" parent="FadeBlack" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 840.0
margin_top = 660.0
margin_right = 1200.0
margin_bottom = 900.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_colors/font_color_pressed = Color( 0, 0, 0, 0 )
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1
_sections_unfolded = [ "Material", "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="2"]

stream = ExtResource( 4 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = true
mix_target = 0
bus = "Master"

[connection signal="timeout" from="FadeBlack/fadeTimer" to="FadeBlack" method="_on_fadeTimer_timeout"]

[connection signal="mouse_entered" from="FadeBlack/Button" to="Sprite" method="_on_Button_mouse_entered"]

[connection signal="mouse_exited" from="FadeBlack/Button" to="Sprite" method="_on_Button_mouse_exited"]

[connection signal="pressed" from="FadeBlack/Button" to="FadeBlack" method="_on_Button_pressed"]


